+V3.48 Release Candidate for 4.5 5/15/2020 Warn on Bad INI One PrivURL AllowRemoteDelete=true fore maps

--- a/OutworldzFiles/Opensim/bin/OpenSimDefaults.ini
+++ b/OutworldzFiles/Opensim/bin/OpenSimDefaults.ini
@@ -24,7 +24,7 @@
 
     ; Time stamp commands in history file (default false)
     ; ConsoleHistoryTimeStamp = false
-
+	
     ; Set this to true if you want to log crashes to disk
     ; this can be useful when submitting bug reports.
     ; However, this will only log crashes within OpenSimulator that cause the entire program to exit
@@ -362,7 +362,6 @@
 
     ; Image decoding. Use CSJ2K for layer boundary decoding if true,
     ; OpenJPEG if false
-
     UseCSJ2K = true
 
     ; Use "Trash" folder for items deleted from the scene
@@ -399,7 +398,7 @@
     ; #
     ; # SSL certificates validation options
     ; #
-
+    
     ; SSL certificate validation options
     ; you can allow selfsigned certificates or no official CA with next option set to true
     ; NoVerifyCertChain = true
@@ -447,16 +446,16 @@
 
     ; Attempt to render meshes and sculpties on the map
     RenderMeshes = false
-
+	
 	; warp3D rendering height limits for prims (relative to rez position not bounding box)
 	; prims above RenderMaxHeight are excluded
 	; valid values: 100 to 4086
 	;RenderMaxHeight = 4086
-
+	
 	; prims below RenderMinHeight are excluded
 	; valid values: -100 to RenderMaxHeight - 10
 	;RenderMinHeight = -100
-
+    
     ; Show NPCs as green world map dots
     ;ShowNPCs = true
 
@@ -474,6 +473,7 @@
     ; If set to true, then all permissions checks are carried out
     ; Default is true
     serverside_object_permissions = true
+
 
     ; This allows some control over permissions
     ; please note that this still doesn't duplicate SL, and is not intended to
@@ -527,6 +527,7 @@
     ; Minimum user level required to upload assets
     ;LevelUpload = 0
 
+
 [RegionReady]
     ; Enable this module to get notified once all items and scripts in the region have been completely loaded and compiled
     enabled = true
@@ -541,15 +542,17 @@
 
     ; - disallow logins while scripts are loading
     ; Instability can occur on regions with 100+ scripts if users enter before they have finished loading
-    login_disable = false
+    login_disable = true
 
     ; - send an alert as json to a service
     ; alert_uri = "http://myappserver.net/my_handler/"
+
 
 [EstateManagement]
     ; If false, then block any region restart requests from the client even if they are otherwise valid.
     ; Default is true
     AllowRegionRestartFromClient = true
+
 
 [UserProfiles]
   ;# {ProfileURL} {} {Set url to UserProfilesService} {}
@@ -566,6 +569,7 @@
   ;; web sites by other users on their profiles
   ; AllowUserProfileWebURLs = true
 
+
 [SMTP]
     enabled = false
 
@@ -576,6 +580,7 @@
     ;SMTP_SERVER_PORT = 25
     ;SMTP_SERVER_LOGIN = foo
     ;SMTP_SERVER_PASSWORD = bar
+
 
 [Network]
     ConsoleUser = "Test"
@@ -593,7 +598,7 @@
     http_listener_cert_path = "mycert.p12" ; path for the cert file that is valid for the ExternalHostName
 	http_listener_cert_pass = "mycertpass" ; the cert passwork
 
-    ; addicional HTTPS for "Out of band" management applications such as the remote
+    ; addicional HTTPS for "Out of band" management applications such as the remote 
     ; admin module or scripts
     ;
     ; Create https_listener = "True" will create a listener on the port
@@ -615,7 +620,7 @@
 
     ; Hostname to use in llRequestURL/llRequestSecureURL
 	; must be a valid hostname for the ssl cert.
-	; if not defined - llRequestURL/llRequestSecureURL are disabled
+	; if not defined - llRequestURL/llRequestSecureURL are disabled   
     ; ExternalHostNameForLSL=127.0.0.1
 
     ; Disallow the following address ranges for user scripting calls (e.g. llHttpRequest())
@@ -656,10 +661,10 @@
 
 [ScriptsHttpRequestModule]
 	; options for llHttpRequest
-
+	
 	; max number of concurrent connections per instance (all scenes), default 8
 	; MaxPoolThreads = 8
-
+	
     ; max requests per second for all scripts on a prim, default 1
     ;PrimRequestsPerSec = 1.0
 	; initial unthrottled burst for all scripts on a prim, default 3
@@ -669,10 +674,10 @@
     ;PrimOwnerRequestsPerSec = 25.0
 	; initial unthrottled burst for the objects owner (per instance), default 5
     ;PrimOwnerRequestsBurst = 5.0
-
+	
 	; requests timeout in miliseconds, range 200 to 60000, default 30000
     ;RequestsTimeOut = 30000
-
+	
 [AccessControl]
 	; Viewer-based access control. |-separated list of allowed viewers.
     ; AllowedClients = ""
@@ -680,6 +685,7 @@
 	; Viewer-based access control. |-separated list of denied viewers.
 	; No restrictions by default.
     ; DeniedClients = ""
+
 
 [ClientStack.LindenUDP]
     ; Maximum outbound bytes per second for a single scene. This can be used to
@@ -708,6 +714,7 @@
     ; default
     ; currently disabled
     ;enable_adaptive_throttles = false
+
 
     ; TextureSendLimit determines how many packets will be put on
     ; the lludp outgoing queue each cycle. Like the settings above, this
@@ -823,6 +830,7 @@
     ; Capability for searching for people
     Cap_AvatarPickerSearch = "localhost"
 
+
 [Chat]
     ; Controls whether the chat module is enabled.  Default is true.
     enabled = true
@@ -849,7 +857,7 @@
 
 	; This disables border transfers for objects. When true, objects can be placed outside
 	; the region's border without being transferred to another simulator.
-    DisableObjectTransfer = false
+	DisableObjectTransfer = false
 
     ; Minimum user level required for HyperGrid teleports
     LevelHGTeleport = 0
@@ -862,7 +870,8 @@
 	;; This option exists to control the behavior of teleporting gods into places that have landing points
 	;; and telehubs. Historically, there has been a difference: OpenSim (OS) has honored landing points and telehubs even for
 	;; avatars with god permissions; SL lets gods land wherever they want.
-    LandingPointBehavior = LandingPointBehavior_OS
+	LandingPointBehavior = LandingPointBehavior_OS
+
 
 [Messaging]
     ; Control which region module is used for instant messaging.
@@ -877,11 +886,13 @@
     ; Control whether group messages are forwarded to offline users.  Default is true.
     ; ForwardOfflineGroupMessages = true
 
+
 [Inventory]
     ; Control whether multiple objects sent to inventory should be coaleseced into a single item
     ; There are still some issues with coalescence, including the fact that rotation is not restored
     ; and some assets may be missing from archive files.
     CoalesceMultipleObjectsToInventory = true
+
 
 [Appearance]
     ; Persist avatar baked textures
@@ -907,6 +918,7 @@
     ; on every login
     ReuseTextures = false
 
+
 [Attachments]
     ; Controls whether avatar attachments are enabled.
     ; Defaults to true - only set to false for debugging purposes
@@ -917,6 +929,7 @@
     ; true will do as older versions
     ;WearReplacesAll = true
 
+
 [Mesh]
     ; enable / disable mesh asset uploads
     ; mesh asset must conform to standard mesh format, with OpenSim extensions
@@ -924,12 +937,12 @@
     AllowMeshUpload = true
 
     ; Minimum user level required to upload meshes
-    LevelUpload = 0
+    ;LevelUpload = 0
 
     ; support meshes on physics
     UseMeshiesPhysicsMesh = true
 
-    ;support
+    ;support convex shape type on normal prims
     ; (ubOde only)
     ConvexPrims = true
 
@@ -945,6 +958,8 @@
     MeshFileCachePath = MeshCache
     MeshFileCacheDoExpire = true
     MeshFileCacheExpireHours = 48
+
+
 
 [Textures]
     ; If true, textures generated dynamically (i.e. through osSetDynamicTextureData() and similar OSSL functions) are reused where possible
@@ -962,6 +977,7 @@
     ; This setting only has an affect is ReuseDynamicTextures = true
     ; Default is false
     ReuseDynamicLowDataTextures = false
+
 
 [ODEPhysicsSettings]
     ; ##
@@ -1014,6 +1030,7 @@
     world_hashSpace_level_high = 12
 
     meters_in_small_space = 29.9
+
 
     ; ##
     ; ## Contact properties. (the stuff that happens when things come in contact with each other)
@@ -1146,6 +1163,7 @@
     ; (ubOde only)
     ; MinSizeToMeshmerize = 0.1
 
+
 [BulletSim]
     ; All the BulletSim parameters can be displayed with the console command
     ;   "physics get all" and all are defined in the source file
@@ -1228,6 +1246,7 @@
     PhysicsLoggingDir = "."
     VehicleLoggingEnabled = False
 
+
 [RemoteAdmin]
     enabled = false
 
@@ -1290,6 +1309,7 @@
     ; path to default appearance XML file that specifies the look of the default avatars
     ;default_appearance = default_appearance.xml
 
+
 ; RestPlugins are not currently operational.
 ;[RestPlugins]
 ;    ; Change this to true to enable REST Plugins. This must be true if you wish to use
@@ -1298,9 +1318,11 @@
 ;    god_key = SECRET
 ;    prefix = /admin
 
+
 ;[RestRegionPlugin]
 ;    ; Change this to true to enable the REST Region Plugin
 ;    enabled = false
+
 
 ;[RestHandler]
 ;    ; Change this to true to enable the REST Asset and Inventory Plugin
@@ -1313,6 +1335,7 @@
 ;    path-fill = true
 ;    dump-line-size = 32
 ;    flush-on-error = true
+
 
 ; IRC bridge is experimental, so if it breaks... keep both parts... yada yada
 ; also, not good error detection when it fails
@@ -1384,6 +1407,7 @@
     ;alert_msg_pre = "This region is linked to Irc."
     ;alert_msg_post = "Everything you say in public chat can be listened."
 
+
 ; The following settings control the progression of daytime
 ; in the Sim.  The defaults are the same as the commented out settings
 [Sun]
@@ -1396,6 +1420,7 @@
     ; send a Sun update every update_interval # of frames.  A lower number will
     ; make for smoother sun transition at the cost of network
     ;update_interval = 100
+
 
 [Wind]
     ; Enables the wind module.  Default is true
@@ -1419,6 +1444,7 @@
     ; Adjusts wind strength. 0.0 = no wind, 1.0 = normal wind.  Default is 1.0
     strength = 1.0
 
+
 [Cloud]
     ; Enable this to generate classic particle clouds above the sim.
     ; default is disabled - turn it on here
@@ -1431,10 +1457,12 @@
     ; default is 1000
     cloud_update_rate = 1000
 
+
 [LightShare]
     ; This enables the transmission of Windlight scenes to supporting clients, such as the Meta7 viewer.
     ; It has no ill effect on viewers which do not support server-side windlight settings.
     enable_windlight = false
+
 
 [Trees]
     ; enable the trees module. default true
@@ -1456,6 +1484,7 @@
 [VectorRender]
     ; the font to use for rendering text (default: Arial)
     ; font_name = "Arial"
+
 
 [LL-Functions]
     ; Set the following to true to allow administrator owned scripts to execute console commands
@@ -1649,6 +1678,7 @@
     ; Improves performance but uses more memory
     UseMeshCacheInLlCastRay = true
 
+
 [DataSnapshot]
     ; The following set of configs pertains to search.
     ; Set index_sims to true to enable search engines to index your searchable data
@@ -1674,6 +1704,7 @@
     ; Uncomment if you want to index your data with this and/or other search providers. One entry per
     ; data service
     ;DATA_SRV_MISearch = "http://metaverseink.com/cgi-bin/register.py"
+
 
 [Economy]
     ; the economy module in use
@@ -1711,12 +1742,13 @@
     ;PriceObjectRent = 0
     ;PriceObjectScaleFactor = 10
     ;PriceParcelRent = 0
-
+	
 	; Mesh upload settings, independent of economymodule
-
+	
 	; Create inventory entries for textures uploaded with a model
 	; default is false, ie, do not create
 	; MeshModelAllowTextureToInventory = true
+	
 
 [YEngine]
     ;; implements non preemptive microthreading, so fixing problems like llSleep or long events handlers
@@ -1724,10 +1756,10 @@
     ;; warning: scripts state is lost on TP or cross to Xengine regions (cars stop, etc)
     ;; ignore its extensions (subset of original XMRengine), those are still undefined.
     ;Enabled = false
-
+    
     ; maximum stack a script can use in KB
     ;ScriptStackSize = 2048
-
+    
     ; maximum heap memory a script can use in KB
     ;ScriptHeapSize = 1024
 
@@ -1744,6 +1776,7 @@
 
     ; scripts states and cache parent folder location
     ;ScriptBasePath="ScriptEngines"
+
 
 [XEngine]
     ; Enable this engine in this OpenSim instance
@@ -1896,6 +1929,7 @@
     ;; Path to script assemblies
     ; ScriptEnginesPath = "ScriptEngines"
 
+
 [Concierge]
     ; Enable concierge module
     ; Default is false
@@ -1927,9 +1961,11 @@
     ; {1} is replaced with the region's UUID
     ;broker = "http://broker.place.com/{1}"
 
+
 [Hypergrid]
     ; Keep it false for now. Making it true requires the use of a special client in order to access inventory
     safemode = false
+
 
 [VivoxVoice]
     ; The VivoxVoice module will allow you to provide voice on your
@@ -1989,6 +2025,7 @@
     ; - a value between 0 and 160, default is 10
     ;vivox_channel_clamping_distance = 10
 
+
 [Groups]
     Enabled = false
 
@@ -2044,6 +2081,7 @@
     ; Minimum user level required to create groups
     ;LevelGroupCreate = 0
 
+
 [PacketPool]
     ;RecyclePackets = true
     ;RecycleDataBlocks = true
@@ -2052,9 +2090,10 @@
     ; This reduces data churn
     RecycleBaseUDPPackets = true
 
+
 [InterestManagement]
     ; This section controls how state updates are prioritized for each client
-
+	
     ; UpdatePrioritizationScheme valid values are BestAvatarResponsiveness and SimpleAngularDistance
 	; SimpleAngularDistance does use more cpu
     UpdatePrioritizationScheme = BestAvatarResponsiveness
@@ -2063,11 +2102,11 @@
     RootReprioritizationDistance = 10.0
     ChildReprioritizationDistance = 20.0
 
-    ; ObjectsCullingByDistance, if true, don't send object updates if outside view range
-    ; currently viewers are also told to delete objects that leave view range
-    ; only avater position is considered, free camera may not see objects
-    ; does increase cpu load
-    ObjectsCullingByDistance = false
+	; ObjectsCullingByDistance, if true, don't send object updates if outside view range
+	; currently viewers are also told to delete objects that leave view range
+	; only avater position is considered, free camera may not see objects
+	; does increase cpu load
+	ObjectsCullingByDistance = false
 
     ; If n > 1, only every n UDP terse updates will be sent to observers of an avatar that are in the same region
     ; Updates will always be sent to the avatar that the update addresses and if av velocity is effectively zero (to prevent drift due to missing updates).
@@ -2091,9 +2130,10 @@
     ; Enable region monitoring
     ; If true, this will print out an error if more than a minute has passed since the last simulator frame
     ; Also is another source of region statistics provided via the regionstats URL
-    Enabled = false
+    Enabled = true
     ; next option may still use framework performance monitors designed for debug only, so avoid it
     ;ServerStatsEnabled = false
+
 
 [WebStats]
     ; View region statistics via a web page
@@ -2110,6 +2150,7 @@
 [MediaOnAPrim]
     ; Enable media on a prim facilities
     Enabled = true
+
 
 [NPC]
     ;; Enable Non Player Character (NPC) facilities
@@ -2148,18 +2189,18 @@
     LimitParcelLayerUpdateDistance = true
     ParcelLayerViewDistance = 128
 
-    ; set this to false to not display parcel ban lines
-    ShowParcelBansLines = true
+	; set this to false to not display parcel ban lines
+	ShowParcelBansLines = true
+	
+	; Parcel Bans max height above ground. Default 100m
+	; range 20m to 5000m
+	; BanLineSafeHeight = 100
 
-    ; Parcel Bans max height above ground. Default 100m
-    ; range 20m to 5000m
-    ; BanLineSafeHeight = 100
-
-    ; setting the parcel to admin content, It works as setting the land to Linden content in SL.
-    ; To use it, activate god mode in the viewer, select the parcel and go to: Admin -> Parcel -> Set to Linden Content ( CTRL+ALT+SHIFT+C)
-    ;DefaultAdministratorParcelName = "Admin Parcel"
-    ;DefaultAdministratorGroupUUID = "00000000-0000-0000-0000-000000000000"
-    ;DefaultAdministratorOwnerUUID = "00000000-0000-0000-0000-000000000000"
+	; setting the parcel to admin content, It works as setting the land to Linden content in SL.
+	; To use it, activate god mode in the viewer, select the parcel and go to: Admin -> Parcel -> Set to Linden Content ( CTRL+ALT+SHIFT+C)
+	; DefaultAdministratorParcelName = "Admin Parcel"
+	; DefaultAdministratorGroupUUID = "00000000-0000-0000-0000-000000000000"
+	; DefaultAdministratorOwnerUUID = "00000000-0000-0000-0000-000000000000"
 
 ;;
 ;; If you are using a simian grid frontend you can enable
@@ -2170,15 +2211,17 @@
     MaptileURL = "http://www.mygrid.com/Grid/"
     RefreshTime = 3600
 
+
 ;;
 ;; JsonStore module provides structured store for scripts
 ;;
 [JsonStore]
-    Enabled = False
+    Enabled = True
 
     ;; Enable direct access to the SOP dynamic attributes
     EnableObjectStore = False
     MaxStringSpace = 0
+
 
 ;;
 ;; These are defaults that are overwritten below in [Architecture].
@@ -2193,13 +2236,16 @@
     ; asset store each time the region starts
     AssetLoaderEnabled = true
 
+
 [GridService]
     ;; default standalone, overridable in StandaloneCommon.ini
     StorageProvider = "OpenSim.Data.Null.dll:NullRegionData"
 
+
 [AutoBackupModule]
     ;; default is module is disabled at the top level
     AutoBackupModuleEnabled = false
+
 
 [Sounds]
     ;; {Module} {} {Implementation of ISoundModule to use.} {OpenSim.Region.CoreModules.dll:SoundModule}
@@ -2207,6 +2253,7 @@
 
     ;; {MaxDistance} {} {Cut-off distance at which sounds will not be sent to users} {100.0}
     MaxDistance = 100.0
+
 
 [ServiceThrottle]
     ;; Default time interval (in ms) for the throttle service thread to wake up
@@ -2219,6 +2266,7 @@
 [ServerReleaseNotes]
 	;; Comment or set to "" to disable
     ServerReleaseNotesURL = "http://opensimulator.org/wiki/0.9.1.1_Release"
-
+	
 [Modules]
     Include-modules = "addon-modules/*/config/*.ini"
+
