https:://hyperica.com

--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -30,7 +30,7 @@ http_listener_port=8002
 
 ;; Set by Dreamgrid
 ; The URL of the Robust server
-BaseURL=http://192.168.2.133
+BaseURL=http://mach.outworldz.net
 
 ; The URL of the Robust server, if PublicPort and PrivatePort must be
 ; accessed via different hostnames as in the case of a NAT gateway
@@ -520,7 +520,7 @@ MapTileURL="${Const|BaseURL}:${Const|PublicPort}/";
 
 ; Url to search service
 ;SearchURL=http://www.hyperica.com/Search/query.php
-SearchURL=http://hyperica.com/Search/query.php
+SearchURL=https://hyperica.com/Search/query.php
 
 ; For V3 destination guide
 DestinationGuide="http://www.hyperica.com/destination-guide/"
