--- a/OutworldzFiles/Opensim/bin/Gloebit.ini
+++ b/OutworldzFiles/Opensim/bin/Gloebit.ini
@@ -32,8 +32,8 @@ GLBEnvironment=sandbox
 ;; Application the GMM on this process will connect to within the environment specified above
 ;; Fill in GLBKey and GLBSecret with values from app created at https://sandbox.gloebit.com/merchant-tools/
 ;; See http://dev.gloebit.com/opensim/configuration-instructions/ for more details.
-GLBKey=OAuth Sandbox key
-GLBSecret=OAuth sandbox secret
+GLBKey=
+GLBSecret=
 
 ;; GLBKeyAlias is optional and can be left out.
 ;; If included, this will be used to make some URLs more user-friendly and human-readalbe
@@ -45,11 +45,11 @@ GLBSecret=OAuth sandbox secret
 ;; Those messages will include a trailing instruction string formatted like:
 ;; Please contact GLBOnwerName at GLBOwnerEmail if this problem persists.
 ;; GLBOwnerName should be replaced with the neme of the person or avatar which manages this OpenSim process.
-GLBOwnerName=Your Avatar Name
-GLBOwnerEmail=Your Email
+GLBOwnerName=
+GLBOwnerEmail=
 
 ;; Should be set for robust for grid, opensim for standalone
-GLBSpecificConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;User ID=robustuser;Password=robustpassword;Old Guids=true;Allow Zero Datetime=true;Connect Timeout=28800;Command Timeout=28800;"
+GLBSpecificConnectionString="Data Source=127.0.0.1;Database=Robust;Port=3306;User ID=robustuser;Password=robustpassword;Old Guids=true;Allow Zero Datetime=true;Connect Timeout=28800;Command Timeout=28800;"
 
 [Welcome]
 InternalPort=8004
