--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -252,7 +252,7 @@ GatekeeperURI="${Const|BaseURL}:${Const|PublicPort}"
 ; Change the connection string to your db details
 ;; Set by Dreamgrid
 StorageProvider="OpenSim.Data.MySQL.dll"
-ConnectionString="Data Source=127.0.0.1;Database=Robust;Port=3306;User ID=robustuser;Password=robustpassword;Old Guids=true;Allow Zero Datetime=true;Connect Timeout=28800;Command Timeout=28800;"
+ConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;User ID=robustuser;Password=robustpassword;Old Guids=true;Allow Zero Datetime=true;Connect Timeout=28800;Command Timeout=28800;"
 
 ; * As an example, the below configuration precisely mimicks the legacy
 ; * asset server. It is read by the asset IN connector (defined above)
@@ -843,8 +843,8 @@ LocalServiceModule="OpenSim.Services.MuteListService.dll:MuteListService"
 [SMTP]
 SMTP_SERVER_HOSTNAME=smtp.gmail.com
 SMTP_SERVER_PORT=587
-SMTP_SERVER_LOGIN=
-SMTP_SERVER_PASSWORD=
+SMTP_SERVER_LOGIN=Gmail for notification
+SMTP_SERVER_PASSWORD=Gmail password
 
 ; Automatically changed by Dreamworld - do not change this - Should be True ( case sensitive)
 ;; Set to True to enable Smart Start
