--- a/OutworldzFiles/Apache/conf/httpd.conf
+++ b/OutworldzFiles/Apache/conf/httpd.conf
@@ -131,7 +131,7 @@ LoadModule headers_module modules/mod_headers.so
 #LoadModule imagemap_module modules/mod_imagemap.so
 LoadModule include_module modules/mod_include.so
 #LoadModule info_module modules/mod_info.so
-LoadModule isapi_module modules/mod_isapi.so
+#LoadModule isapi_module modules/mod_isapi.so
 #LoadModule lbmethod_bybusyness_module modules/mod_lbmethod_bybusyness.so
 #LoadModule lbmethod_bytraffic_module modules/mod_lbmethod_bytraffic.so
 #LoadModule lbmethod_heartbeat_module modules/mod_lbmethod_heartbeat.so
@@ -174,7 +174,7 @@ LoadModule setenvif_module modules/mod_setenvif.so
 #LoadModule slotmem_plain_module modules/mod_slotmem_plain.so
 #LoadModule slotmem_shm_module modules/mod_slotmem_shm.so
 #LoadModule socache_dbm_module modules/mod_socache_dbm.so
-#LoadModule socache_memcache_module modules/mod_socache_memcache.so
+LoadModule socache_memcache_module modules/mod_socache_memcache.so
 #LoadModule socache_redis_module modules/mod_socache_redis.so
 LoadModule socache_shmcb_module modules/mod_socache_shmcb.so
 #LoadModule speling_module modules/mod_speling.so
@@ -184,7 +184,7 @@ LoadModule status_module modules/mod_status.so
 #LoadModule unique_id_module modules/mod_unique_id.so
 #LoadModule userdir_module modules/mod_userdir.so
 #LoadModule usertrack_module modules/mod_usertrack.so
-#LoadModule version_module modules/mod_version.so
+LoadModule version_module modules/mod_version.so
 #LoadModule vhost_alias_module modules/mod_vhost_alias.so
 #LoadModule watchdog_module modules/mod_watchdog.so
 #LoadModule xml2enc_module modules/mod_xml2enc.so
@@ -250,14 +250,6 @@ ServerName 192.168.2.133
 # This fixes a bug with the OS
 AcceptFilter http none
 AcceptFilter https none
-
-ThreadsPerChild 200
-MaxRequestsPerChild 1000000
-
-KeepAlive On
-KeepAliveTimeout 5000
-MaxKeepAliveRequests 5000
-TimeOut 5000  
 
 #
 # Deny access to the entirety of your server's filesystem. You must
@@ -505,7 +497,7 @@ CustomLog "|bin/rotatelogs.exe -l \"C:/Opensim/Outworldz_Dreamgrid/Outworldzfile
 # contents of the file itself to determine its type.  The MIMEMagicFile
 # directive tells the module where the hint definitions are located.
 #
-#MIMEMagicFile conf/magic
+MIMEMagicFile conf/magic
 
 #
 # Customizable error responses come in three flavors:
@@ -535,8 +527,8 @@ CustomLog "|bin/rotatelogs.exe -l \"C:/Opensim/Outworldz_Dreamgrid/Outworldzfile
 # broken on your system.
 # Defaults: EnableMMAP On, EnableSendfile Off
 #
-EnableMMAP on
-EnableSendfile on
+EnableMMAP off
+EnableSendfile off
 
 
 # Supplemental configuration
@@ -547,7 +539,7 @@ EnableSendfile on
 # necessary.
 
 # Server-pool management (MPM specific)
-#Include conf/extra/httpd-mpm.conf
+Include conf/extra/httpd-mpm.conf
 
 # Multi-language error messages
 Include conf/extra/httpd-multilang-errordoc.conf
@@ -607,23 +599,23 @@ AcceptFilter https none
 #</IfModule>
 
 # The following lines prevent .user.ini PHP settings files from being viewed by Web clients.
-#<Files ".user.ini">
-#
-#<IfVersion < 2.3 >
-#    Order allow,deny
-#    Deny from all
-#</IfVersion>
-#<IfVersion >= 2.3>
-#    Require all denied
-#</IfVersion>
-#
-#</Files>
+<Files ".user.ini">
+
+<IfVersion < 2.3 >
+    Order allow,deny
+    Deny from all
+</IfVersion>
+<IfVersion >= 2.3>
+    Require all denied
+</IfVersion>
+
+</Files>
 
 
 <IfModule expires_module>
     # enable expirations
     ExpiresActive On
-    ExpiresDefault "access plus 1 hour"
+    ExpiresDefault "access plus 1 days"
 </IfModule>
 
 
@@ -638,26 +630,46 @@ AcceptFilter https none
   </filesmatch>
 </ifmodule>
  
- <IfModule mod_deflate.c>
-    SetOutputFilter DEFLATE
-    
-    # You can't compress what is already compressed
-    
-    SetEnvIfNoCase Request_URI \.(?:gif|jpe?g|png)$ no-gzip dont-vary
-    SetEnvIfNoCase Request_URI \.(?:exe|t?gz|zip|bz2|sit|rar)$ no-gzip dont-vary
-    
-    # Make proxies work as they should.
-    <IfModule mod_headers.c>
-        Header append Vary User-Agent
-    </IfModule>
+ <IfModule deflate_module>
+SetOutputFilter DEFLATE
+SetEnvIfNoCase Request_URI \.(?:gif|jpe?g|png)$ no-gzip dont-vary
+SetEnvIfNoCase Request_URI \.(?:exe|t?gz|zip|bz2|sit|rar)$ no-gzip dont-vary
+SetEnvIfNoCase Request_URI \.pdf$ no-gzip dont-vary
 
-</IfModule> 
+AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css text/javascript application/javascript
+
+BrowserMatch ^Mozilla/4 gzip-only-text/html
+BrowserMatch ^Mozilla/4\.0[678] no-gzip
+BrowserMatch "MSIE [2-5]" \
+         nokeepalive ssl-unclean-shutdown \
+         downgrade-1.0 force-response-1.0
+BrowserMatch "MSIE [16-9]" ssl-unclean-shutdown
+
+DeflateCompressionLevel 9
+
+DeflateFilterNote Input input_info
+DeflateFilterNote Output output_info
+DeflateFilterNote Ratio ratio_info
+
+</IfModule>
 
 # Security 
 ServerSignature Off
 ServerTokens Prod
 TraceEnable Off
 
- #<IfModule mpm_winnt_module>
-#    ThreadStackSize 8888888
-#</IfModule>
+
+
+<IfModule mod_expires.c>
+        ExpiresActive On
+        ExpiresDefault "access plus 1 week"
+        ExpiresByType image/jpg "access plus 1 month"
+        ExpiresByType image/jpeg "access plus  1 month"
+        ExpiresByType image/gif "access plus  1 month"
+        ExpiresByType image/png "access plus  1 month"
+        ExpiresByType text/css "access plus  1 month"        
+        ExpiresByType application/pdf "access plus 1 month"
+        ExpiresByType application/zip "access plus 1 month"
+        ExpiresByType text/x-javascript "access plus 1 hour"
+        ExpiresByType image/x-icon "access plus 1 year"
+</IfModule>
