--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -47,6 +47,10 @@ PrivatePort=8003
 ; port used for icons, teleports and other tasks when communicating to/from opensim
 DiagnosticsPort=8001
 
+; jOpenSim URL
+jOpensimURL="http://MEINDOMAINNAME:JOpensimPORT"
+jOpensimURLSSL="https://MEINDOMAINNAME:jOpenSimPORT"
+
 ; * The startup section lists all the connectors to start up in this server
 ; * instance. This may be only one, or it may be the entire server suite.
 ; * Multiple connectors should be separated by commas.
@@ -262,7 +266,7 @@ ConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;User ID=robust
 [AssetService]
 
 ;; Choose an asset service (Only one option should be enabled)
-LocalServiceModule=OpenSim.Services.AssetService.dll:AssetService
+LocalServiceModule=OpenSim.Services.FSAssetService.dll:FSAssetConnector
 
 ;LocalServiceModule="OpenSim.Services.FSAssetService.dll:FSAssetConnector"
 ;; FSAsset Directories. Base directory, where final asset files are stored and Spool directory for temp files
@@ -521,13 +525,15 @@ AllowRemoteSetLoginLevel="false"
 MapTileURL="${Const|BaseURL}:${Const|PublicPort}/";
 
 ; Url to search service
+;SearchURL = "${Const|jOpensimURL}/index.php?option=com_opensim&view=inworldsearch&task=viewersearch&tmpl=component&"
 ;SearchURL=http://www.hyperica.com/Search/query.php
 SearchURL=https://hyperica.com/Search/query.php
 
 ; For V3 destination guide
+;DestinationGuide = "${Const|jOpensimURL}/index.php?option=com_opensim&view=guide&tmpl=component"
 DestinationGuide="http://www.hyperica.com/destination-guide/"
-DestinationGuideURI="http://www.hyperica.com/destination-guide/"
 
+;DestinationGuideURI="http://www.hyperica.com/destination-guide/"
 ; For V3 avatar picker (( work in progress ))
 ; AvatarPicker = "${Const|BaseURL}/avatars"
 ; If you run this login server behind a proxy, set this to true
@@ -619,10 +625,12 @@ gridnick=${Const|GridName}
 ; login page: optional: if it exists it will be used to tell the client to use
 ;                       this as splash page
 ;; Set by Dreamgrid
+;welcome = ${Const|jOpensimURL}/index.php?option=com_opensim
 welcome=http://outworldz.com/Outworldz_installer/Welcome.htm
 
 ; helper uri: optional: if it exists it will be used to tell the client to use
 ;                       this for all economy related things
+;economy = ${Const|jOpensimURL}/components/com_opensim/
 ;economy = ${Const|BaseURL):${Const|PublicPort}
 economy=${Const|BaseURL}:${Const|PublicPort}
 
@@ -633,6 +641,7 @@ economy=${Const|BaseURL}:${Const|PublicPort}
 register=${Const|BaseURL}:${Const|PublicPort}/wifi/user/account/
 
 ; help: optional: page providing further assistance for users of your grid
+; help = ${Const|jOpensimURLSSL}/
 help="https://www.outworldz.com/Outworldz_installer/Manual_TroubleShooting.htm"
 
 ; password help: optional: page providing password assistance for users of your grid
@@ -762,7 +771,7 @@ AuthType=None
 [HGAssetService]
 
 ;; Use the second option if you have FSAsset service enabled
-LocalServiceModule=OpenSim.Services.HypergridService.dll:HGAssetService
+LocalServiceModule=OpenSim.Services.HypergridService.dll:HGFSAssetService
 
 ;LocalServiceModule = "OpenSim.Services.HypergridService.dll:HGFSAssetService"
 UserAccountsService="OpenSim.Services.UserAccountService.dll:UserAccountService"
