--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -473,6 +473,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="UploadImage.vb" />
+    <Compile Include="WordWrap.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="FormApache.resx">
