--- a/OutworldzFiles/Opensim/bin/OpenSimDefaults.ini
+++ b/OutworldzFiles/Opensim/bin/OpenSimDefaults.ini
@@ -362,7 +362,7 @@
 
     ; Image decoding. Use CSJ2K for layer boundary decoding if true,
     ; OpenJPEG if false
-    UseCSJ2K = true
+    UseCSJ2K = false
 
     ; Use "Trash" folder for items deleted from the scene
     ; When set to True (the default) items deleted from the scene will be
