max_execution_time = 120 for WordPress install Apache TimeOut = 2 minutes ( 120 in seconds)

--- a/OutworldzFiles/Apache/conf/httpd.conf
+++ b/OutworldzFiles/Apache/conf/httpd.conf
@@ -325,7 +325,8 @@ Use VDir "C:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/Apache/htdocs"
 </IfModule>
 
 <VirtualHost  *:80>
-Timeout 5000
+#two minutes for wp to install
+TimeOut 120
 
 
 # must be flush aligned left
