Add Wordpress and Joompa/Jopensim or other CMS capability to Apache web server without stepping on Dreamgrid or the updater breaking the CMS

--- a/OutworldzFiles/Apache/conf/httpd.conf
+++ b/OutworldzFiles/Apache/conf/httpd.conf
@@ -245,7 +245,7 @@ ServerAdmin email@somewhere.com
 # If your host doesn't have a registered DNS name, enter its IP address here.
 #
 # changed by Dreamgrid
-ServerName 192.168.2.133
+ServerName mach.outworldz.net
 
 # This fixes a bug with the OS
 AcceptFilter http none
@@ -331,7 +331,7 @@ TimeOut 120
 
 # must be flush aligned left
 # changed by Dreamgrid
-ServerName 192.168.2.133
+ServerName mach.outworldz.net
 
 # in case you want a different URL for your servers Web site yet still have Apache on.
 #Redirect permanent / https://google.com
@@ -506,7 +506,7 @@ MIMEMagicFile conf/magic
 #
 #ErrorDocument 500 "The server made a boo boo."
 #ErrorDocument 404 "oops"
-#ErrorDocument 404 /error404.htm
+ErrorDocument 404 /DreamGrid/error404.htm
 
 #ErrorDocument 404 "/cgi-bin/missing_handler.pl"
 #ErrorDocument 402 http://www.example.com/subscription_info.html
