Default.htm is the last to load

--- a/OutworldzFiles/Apache/conf/httpd.conf
+++ b/OutworldzFiles/Apache/conf/httpd.conf
@@ -65,7 +65,7 @@ Define ENABLE_TLS13 "Yes"
 # prevent Apache from glomming onto all bound IP addresses.
 #
 #Listen 12.34.56.78:80
-Listen 80
+Listen 8200
 
 #
 # Dynamic Shared Object (DSO) Support
@@ -321,10 +321,10 @@ Use VDir "C:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/Apache/htdocs"
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex default.htm index.php index.htm index.html
+    DirectoryIndex  index.php index.htm index.html default.htm
 </IfModule>
 
-<VirtualHost  *:80>
+<VirtualHost  *:8200>
 #two minutes for wp to install
 TimeOut 120
 
@@ -589,15 +589,15 @@ SSLRandomSeed connect builtin
 AcceptFilter http none
 AcceptFilter https none
 
-#<IfModule headers_module>
-#    <IfVersion >= 2.4.7 >
-#        Header always setifempty X-Frame-Options SAMEORIGIN
-#    </IfVersion>
-#    <IfVersion < 2.4.7 >
-#        Header always merge X-Frame-Options SAMEORIGIN
-#    </IfVersion>
-#    RequestHeader unset Proxy
-#</IfModule>
+<IfModule headers_module>
+    <IfVersion >= 2.4.7 >
+        Header always setifempty X-Frame-Options SAMEORIGIN
+    </IfVersion>
+    <IfVersion < 2.4.7 >
+        Header always merge X-Frame-Options SAMEORIGIN
+    </IfVersion>
+    RequestHeader unset Proxy
+</IfModule>
 
 # The following lines prevent .user.ini PHP settings files from being viewed by Web clients.
 <Files ".user.ini">
