Add gatekeeper alias to OsGrid Server

--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon-OsGridServer.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon-OsGridServer.ini
@@ -53,7 +53,9 @@
     ;; that runs the Gatekeeper service.
     ;; For example http://myworld.com:9000 or http://myworld.com:8002
     ;; This is a default that can be overwritten in some sections.
+    
     GatekeeperURI = "http://hg.osgrid.org:80"
+    GatekeeperURIAlias = "login.osgrid.org , users.osgrid.org"
 
 [Modules]
     ;; Choose one cache module and the corresponding config file, if it exists.
@@ -225,5 +227,5 @@
     ; DisallowResidents -- only Admins and Managers allowed
     ; Example:
 ; START
- Region_Test_1 = "DisallowForeigners"
+ 
 ; END
