--- a/OutworldzFiles/Opensim/addon-modules/OpenSimBirds/Module/OpenSimBirds.Module.csproj
+++ b/OutworldzFiles/Opensim/addon-modules/OpenSimBirds/Module/OpenSimBirds.Module.csproj
@@ -135,6 +135,9 @@
 	  <Compile Include="BirdsModule\FlowMap.cs">
 		<SubType>Code</SubType>
 	  </Compile>
+	  <Compile Include="obj\Debug\.NETFramework,Version=v4.6.AssemblyAttributes.cs">
+		<SubType>Code</SubType>
+	  </Compile>
   </ItemGroup>
 	<Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 	<PropertyGroup>
