--- a/OutworldzFiles/Opensim/addon-modules/OpenSimSearch/Modules/OpenSimSearch.Modules.csproj
+++ b/OutworldzFiles/Opensim/addon-modules/OpenSimSearch/Modules/OpenSimSearch.Modules.csproj
@@ -121,6 +121,9 @@
 	<ItemGroup>
 	</ItemGroup>
 	<ItemGroup>
+	  <Compile Include="obj\Debug\.NETFramework,Version=v4.6.AssemblyAttributes.cs">
+		<SubType>Code</SubType>
+	  </Compile>
 	  <Compile Include="SearchModule\OpenSearch.cs">
 		<SubType>Code</SubType>
 	  </Compile>
