--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -229,6 +229,12 @@
     <Compile Include="FormBackupCheckboxes.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FormBanList.Designer.vb">
+      <DependentUpon>FormBanList.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FormBanList.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FormCaches.designer.vb">
       <DependentUpon>FormCaches.vb</DependentUpon>
     </Compile>
@@ -484,6 +490,9 @@
     <EmbeddedResource Include="FormBackupCheckboxes.resx">
       <DependentUpon>FormBackupCheckboxes.vb</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormBanList.resx">
+      <DependentUpon>FormBanList.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormCaches.resx">
       <DependentUpon>FormCaches.vb</DependentUpon>
