--- a/OutworldzFiles/Opensim/bin/Wifi.ini
+++ b/OutworldzFiles/Opensim/bin/Wifi.ini
@@ -19,6 +19,7 @@ WebAddress=http://192.168.2.139:8002
 AdminFirst=Wifi
 AdminLast=Admin
 AdminEmail=email@somewhere.com
+AdminPassword=DLTP4PgAd(el5#z
 
 ;; Do you want to be able to control grid registrations?
 AccountConfirmationRequired=True
@@ -42,7 +43,8 @@ AvatarPreselection="Neutral"
 
 ;; Home location for new accounts
 ;; If empty or not set, then the selected default avatar's home location is used.
-; HomeLocation = "<RegionName>/<X>/<Y>/<Z>"
+HomeLocation=Welcome/128/128/24
+
 ;; Accounts with this or a higher user level are able to create links to
 ;; hypergrid regions. Other users are only able to view existing hyperlinks.
 HyperlinkServiceUserLevel=50
@@ -64,10 +66,13 @@ SmtpPassword=Gmail password
 ;; and folders are meant to be changed by you, to fit your needs. They are:
 ;; fluid.css  footer.html  header.html  links.html  splash.html  termsofservice.html  welcome.html
 ;; along with image and language-specific folders.
+;
 ;; The default place for these special pages is a folder called WifiPages in parallel to the bin folder.
 ;; They will be placed there on the first run of Wifi. You can then change them.
+;
 ;; Leave this unchanged unless you know what you're doing.
 ;; UserDocsPath = ".."
+;
 ;; Additionally served resources
 ;; Syntax: ServePath_<Name> = "<Local Path>, <Resource Path>"
 ;;         (<Name> is an arbitrary identifier.)
@@ -75,5 +80,3 @@ SmtpPassword=Gmail password
 ;; base folder "bin" can be accessed via path <WebAddress>/bin/data/, e.g.
 ;; http://localhost:8002/bin/data/prototype.js.
 ServePath_BinData="data, /bin/data"
-AdminPassword=x#C1dYNJLRxl#j9
-HomeLocation=Test DreamGrid/128/128/24
