--- a/Installer_Src/CodeMaid.config
+++ b/Installer_Src/CodeMaid.config
@@ -17,13 +17,13 @@
                 <value>False</value>
             </setting>
             <setting name="Cleaning_AutoCleanupOnFileSave" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="Cleaning_RemoveRegions" serializeAs="String">
                 <value>0</value>
             </setting>
             <setting name="Feature_CleanupAllCode" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="Digging_SecondarySortTypeByName" serializeAs="String">
                 <value>True</value>
@@ -44,12 +44,18 @@
                 <value>False</value>
             </setting>
             <setting name="Feature_SettingCleanupOnSave" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="Digging_PrimarySortOrder" serializeAs="String">
-                <value>2</value>
+                <value>1</value>
             </setting>
             <setting name="Finding_TemporarilyOpenSolutionFolders" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Cleaning_RemoveEndOfFileTrailingNewLine" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Formatting_CommentSkipWrapOnLastWord" serializeAs="String">
                 <value>False</value>
             </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
