--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -356,9 +356,6 @@ AssetService="OpenSim.Services.AssetService.dll:AssetService"
 ;; Set by Dreamgrid
 ;;
 ; START  <= Leave this line
-Region_1X1=FallbackRegion
-Region_3x3=FallbackRegion
-Region_4x4=FallbackRegion
 Region_Welcome="DefaultRegion, DefaultHGRegion"
 
 ; END  <= Leave this line
@@ -677,6 +674,7 @@ SimulationService="OpenSim.Services.Connectors.dll:SimulationServiceConnector"
 ; how does the outside world reach me? This acts as public key too.
 ;; If you have GatekeeperURI set under [Hypergrid], no need to set it here, leave it commented
 ; ExternalName = "${Const|BaseURL}:${Const|PublicPort}"
+;
 ; Does this grid allow incoming links to any region in it?
 ; If false, HG TPs happen only to the Default regions specified in [GridService] section
 AllowTeleportsToAnyRegion=true
@@ -688,7 +686,9 @@ AllowTeleportsToAnyRegion=true
 ;;
 ;; If ForeignAgentsAllowed is true, make exceptions using AllowExcept.
 ;; Leave blank or commented for no exceptions.
-; AllowExcept = "http://griefer.com:8002, http://enemy.com:8002"
+AllowExcept="http://griefer.com:8002, http://enemy.com:8002"
+
+;
 ;;
 ;; If ForeignAgentsAllowed is false, make exceptions using DisallowExcept
 ;; Leave blank or commented for no exceptions.
@@ -718,11 +718,13 @@ UserAccountService="OpenSim.Services.UserAccountService.dll:UserAccountService"
 
 ; If you run this user agent server behind a proxy, set this to true
 ; HasProxy = false
+;;
 ;; If you separate the UserAgentService from the LoginService, set this to
 ;; the IP address of the machine where your LoginService is
 ;LoginServerIP = "127.0.0.1"
 ; User level required to be contacted from other grids
 ;LevelOutsideContacts = 0
+;;
 ;; Restrictions on destinations of local users.
 ;; Are local users allowed to visit other grids?
 ;; What user level? Use variables of this forrm:
@@ -738,12 +740,16 @@ UserAccountService="OpenSim.Services.UserAccountService.dll:UserAccountService"
 ;;
 ;; If ForeignTripsAllowed is true, make exceptions using AllowExcept.
 ;; Leave blank or commented for no exceptions.
-; AllowExcept_Level_200 = "http://griefer.com:8002, http://enemy.com:8002"
+AllowExcept_Level_200="http://griefer.com:8002, http://enemy.com:8002"
+
+;;
 ;; This variable controls what is exposed to profiles of local users
 ;; as seen from outside of this grid. Leave it uncommented for exposing
 ;; UserTitle, UserFlags and the creation date. Uncomment and change to False
 ;; to block this info from being exposed.
-; ShowUserDetailsInHGProfile = True
+ShowUserDetailsInHGProfile=True
+
+;;
 ; * The interface that local users get when they are in other grids.
 ; * This restricts the inventory operations while in other grids.
 ; * Still not completely safe, especially if users perform inventory operations
