--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -243,7 +243,7 @@ GatekeeperURI="${Const|BaseURL}:${Const|PublicPort}"
 ;; - "Imprudence" has no access
 ;; - "Imprudence 1.3" has no access
 ;; - "Imprudence 1.3.1" has access
-DeniedClients=Firestorm-Release 4|HydraStorm|SolarStorm|Singularity Beta 1.8.7.7992|
+DeniedClients=Firestorm-Release 4|HydraStorm|SolarStorm
 
 [DatabaseService]
 
@@ -689,7 +689,6 @@ AllowTeleportsToAnyRegion=true
 ;; Leave blank or commented for no exceptions.
 AllowExcept="http://griefer.com:8002, http://enemy.com:8002"
 
-;
 ;;
 ;; If ForeignAgentsAllowed is false, make exceptions using DisallowExcept
 ;; Leave blank or commented for no exceptions.
@@ -875,9 +874,6 @@ SMTP_SERVER_PASSWORD=Gmail password
 ;; Set by Dreamgrid
 [AutoLoadTeleport]
 Enabled=False
-
-[GateKeeper]
-DeniedMacs=
 
 [SmartStart]
 Enabled=False
