Fix opensim bin

--- a/.gitignore
+++ b/.gitignore
@@ -23,11 +23,12 @@ OutworldzFiles/AutoBackup/*
 baretail.udm
 *.pid
 **/WifiPages-Custom
+fw.bat
 Outworldzfiles/Photo.png
 UDProxy
 /Outworldzfiles/Opensim/WifiPages/
 /Outworldzfiles/Opensim/bin/WifiPages/
-
+/OutworldzFiles/mysql/data/*.err
 LocalUserStatistics.db
 Diagnostics.log
 OpenSimConsoleHistory.txt
@@ -111,11 +112,43 @@ Thumbs.db
 */*/*/*/*/obj
 */*/*/*/*/*/obj
 */*/*/*/*/*/*/obj
-*/*/bin
-*/*/*/bin
-*/*/*/*/bin
-*/*/*/*/*/bin
-*/*/*/*/*/*/bin
-*/*/*/*/*/*/*/bin
+bin/Debug/*.dll
+bin/*.dll.mdb
+bin/*.db
+bin/OpenSim.vshost.exe.config
+bin/*.maddin
+bin/j2kDecodeCache
+bin/Physics*
+bin/Terrain*
+bin/Regions/*
+bin/UserAssets
+bin/estate_settings.xml
+bin/config-include/CenomeCache.ini
+bin/config-include/FlotsamCache.ini
+bin/config-include/GridCommon.ini
+bin/config-include/StandaloneCommon.ini
+bin/OpenSim.Grid.AssetInventoryServer.log
+bin/OpenSim.Grid.AssetServer.log
+bin/OpenSim.Grid.GridServer.log
+bin/OpenSim.Grid.InventoryServer.log
+bin/OpenSim.Grid.MessagingServer.log
+bin/OpenSim.Grid.UserServer.log
+bin/OpenSim.log
 
+bin/crashes/
+Examples/*.dll
+OpenSim.build
+OpenSim.sln
+OpenSim.suo
+Prebuild/Prebuild.build
+Prebuild/Prebuild.sln
+TestResult.xml
+cov/*
+OpenSim/OpenSim.userprefs
+OpenSim/OpenSim.usertasks
+TAGS
+*~
+Makefile.local
+bin/.version
+compile.bat
 
