--- a/.gitignore
+++ b/.gitignore
@@ -79,19 +79,37 @@ Thumbs.db
 # Ignore .user and .suo files as these are user preference specific
 # http://stackoverflow.com/questions/72298/should-i-add-the-visual-studio-suo-and-user-files-to-source-control
 *.suo
-*.VisualState.xml
-*/*/obj
-*/*/*/obj
-*/*/*/*/obj
-*/*/*/*/*/obj
-*/*/*/*/*/*/obj
-*/*/*/*/*/*/*/obj
 */*/*.pdb
 */*/*/*.pdb
 */*/*/*/*.pdb
 */*/*/*/*/*.pdb
 */*/*/*/*/*/*.pdb
 */*/*/*/*/*/*/*.pdb
+
+*/*.build
+*/*/*.build
+*/*/*/*.build
+*/*/*/*/*.build
+*/*/*/*/*/*.build
+*/*/*/*/*/*/*.build
+*/*/*/*/*/*/*/*.build
+*/*/*/*/*/*/*/*/*.build
+*/*/*/*/*/*/*/*/*/*.build
+
+*/*/obj
+*/*/*/obj
+*/*/*/*/obj
+*/*/*/*/*/obj
+*/*/*/*/*/*/obj
+*/*/*/*/*/*/*/obj
+*/*/csproj
+*/*/*/csproj
+*/*/*/*/csproj
+*/*/*/*/*/csproj
+*/*/*/*/*/*/csproj
+*/*/*/*/*/*/*/csproj
+
+
 
 .vs/
 
@@ -108,12 +126,6 @@ Thumbs.db
 *.dll.build
 *.dll
 *.VisualState.xml
-*/*/obj
-*/*/*/obj
-*/*/*/*/obj
-*/*/*/*/*/obj
-*/*/*/*/*/*/obj
-*/*/*/*/*/*/*/obj
 bin/Debug/*.dll
 bin/*.dll.mdb
 bin/*.db
