Get rid of junk in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -79,38 +79,13 @@ Thumbs.db
 
 # Ignore .user and .suo files as these are user preference specific
 # http://stackoverflow.com/questions/72298/should-i-add-the-visual-studio-suo-and-user-files-to-source-control
+
 *.suo
-*/*/*.pdb
-*/*/*/*.pdb
-*/*/*/*/*.pdb
-*/*/*/*/*/*.pdb
-*/*/*/*/*/*/*.pdb
-*/*/*/*/*/*/*/*.pdb
-
-*/*.build
-*/*/*.build
-*/*/*/*.build
-*/*/*/*/*.build
-*/*/*/*/*/*.build
-*/*/*/*/*/*/*.build
-*/*/*/*/*/*/*/*.build
-*/*/*/*/*/*/*/*/*.build
-*/*/*/*/*/*/*/*/*/*.build
-
-*/*/obj
-*/*/*/obj
-*/*/*/*/obj
-*/*/*/*/*/obj
-*/*/*/*/*/*/obj
-*/*/*/*/*/*/*/obj
-*/*/csproj
-*/*/*/csproj
-*/*/*/*/csproj
-*/*/*/*/*/csproj
-*/*/*/*/*/*/csproj
-*/*/*/*/*/*/*/csproj
-
-
+*.pdb
+*.build
+*.obj
+*.csproj
+*.csproj
 
 .vs/
 
