--- a/Installer_Src/CodeMaid.config
+++ b/Installer_Src/CodeMaid.config
@@ -23,7 +23,7 @@
                 <value>0</value>
             </setting>
             <setting name="Feature_CleanupAllCode" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="Digging_SecondarySortTypeByName" serializeAs="String">
                 <value>True</value>
