--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon.ini
@@ -244,6 +244,7 @@ MapImageServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 ; DisallowForeigners -- HG visitors not allowed
 ; DisallowResidents -- only Admins and Managers allowed
 ; START
+Region_Welcome = DisallowResidents 
 ; END
 ;; Uncomment if you are using SimianGrid for grid services
 [SimianGrid]
