--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -243,7 +243,7 @@ GatekeeperURI="${Const|BaseURL}:${Const|PublicPort}"
 ;; - "Imprudence" has no access
 ;; - "Imprudence 1.3" has no access
 ;; - "Imprudence 1.3.1" has access
-DeniedClients=Firestorm-Release 4|HydraStorm|SolarStorm
+DeniedClients=HydraStorm|
 
 [DatabaseService]
 
@@ -594,8 +594,7 @@ DOSForgiveClientAfterMS=120000
 ;
 ;Attempt to login or hypergrid in to the grid, teleport should timeout and login should fail.
 ;
-DeniedMacs=
-AllowExcept=
+DeniedMacs=01:23:45:67:89:A
 
 [MapImageService]
 LocalServiceModule="OpenSim.Services.MapImageService.dll:MapImageService"
@@ -687,7 +686,7 @@ AllowTeleportsToAnyRegion=true
 ;;
 ;; If ForeignAgentsAllowed is true, make exceptions using AllowExcept.
 ;; Leave blank or commented for no exceptions.
-AllowExcept="http://griefer.com:8002, http://enemy.com:8002"
+AllowExcept=http://hg.osgrid.org:80
 
 ;;
 ;; If ForeignAgentsAllowed is false, make exceptions using DisallowExcept
@@ -703,7 +702,7 @@ AllowExcept="http://griefer.com:8002, http://enemy.com:8002"
 ;
 ;Attempt to login or hypergrid in to the grid, teleport should timeout and login should fail.
 ;
-DeniedMacs=""
+DeniedMacs=01:23:45:67:89:A
 
 [UserAgentService]
 LocalServiceModule="OpenSim.Services.HypergridService.dll:UserAgentService"
@@ -740,7 +739,7 @@ UserAccountService="OpenSim.Services.UserAccountService.dll:UserAccountService"
 ;;
 ;; If ForeignTripsAllowed is true, make exceptions using AllowExcept.
 ;; Leave blank or commented for no exceptions.
-AllowExcept_Level_200=
+AllowExcept_Level_200=http://hg.osgrid.org:80
 
 ;;
 ;; This variable controls what is exposed to profiles of local users
