--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -811,6 +811,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="cubes.ico" />
+    <None Include="Resources\flag_iran.png" />
+    <None Include="Resources\flag_saudi_arabia1.png" />
     <None Include="Resources\flag_brazil.png" />
     <None Include="Resources\flag_saudi_arabia.png" />
     <None Include="Resources\basque.png" />
