--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -250,7 +250,7 @@ GatekeeperURI="${Const|BaseURL}:${Const|PublicPort}"
 ;; - "Imprudence" has no access
 ;; - "Imprudence 1.3" has no access
 ;; - "Imprudence 1.3.1" has access
-DeniedClients=HydraStorm|SolarStorm|http://www.outworldz.co
+DeniedClients=
 
 [DatabaseService]
 
@@ -601,7 +601,7 @@ DOSForgiveClientAfterMS=120000
 ;
 ;Attempt to login or hypergrid in to the grid, teleport should timeout and login should fail.
 ;
-DeniedMacs=01:23:45:67:89:A 01:23:45:67:89:AB
+DeniedMacs=
 
 [MapImageService]
 LocalServiceModule="OpenSim.Services.MapImageService.dll:MapImageService"
@@ -695,7 +695,7 @@ AllowTeleportsToAnyRegion=true
 ;;
 ;; If ForeignAgentsAllowed is true, make exceptions using AllowExcept.
 ;; Leave blank or commented for no exceptions.
-AllowExcept=http://hg.osgrid.org:80
+AllowExcept=
 
 ;;
 ;; If ForeignAgentsAllowed is false, make exceptions using DisallowExcept
@@ -711,7 +711,7 @@ AllowExcept=http://hg.osgrid.org:80
 ;
 ;Attempt to login or hypergrid in to the grid, teleport should timeout and login should fail.
 ;
-DeniedMacs=01:23:45:67:89:A 01:23:45:67:89:AB
+DeniedMacs=
 
 [UserAgentService]
 LocalServiceModule="OpenSim.Services.HypergridService.dll:UserAgentService"
