--- a/Installer_Src/Setup DreamWorld/app.config
+++ b/Installer_Src/Setup DreamWorld/app.config
@@ -5,6 +5,9 @@
       <section name="Outworldz.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
+  <appSettings>
+    <add key="SendKeys" value="SendInput"/>
+  </appSettings>
   <system.diagnostics>
     <sources>
       <!-- This section defines the logging configuration for My.Application.Log -->
