--- a/OutworldzFiles/Opensim/bin/Gloebit.ini
+++ b/OutworldzFiles/Opensim/bin/Gloebit.ini
@@ -1,14 +1,11 @@
 ﻿[Gloebit]
 
-; required for grid with Diva
-GLBSpecificStorageProvider=OpenSim.Data.MySQL.dll
-
 ;;;;;; ENABLE GLOBALLY OR FOR INDIVIDUAL REGIONS ;;;;;
 ;# {Enabled} {[Startup]economymodule:Gloebit} {Enable Gloebit Money Module Globally?} {false, true} false
 ;; Set to true to enable GMM for all regions controlled by this OpenSim process.
-;; Requires that "economymodule = Gloebit" is set in opensim.ini
+;; Requires that "economymodule = Gloebit" is set in [Economy] or [Startup] section of opensim.ini
 ;; If set to false, can be enabled for individual regions - see GLBEnabledOnlyInRegions below
-Enabled=False
+Enabled=True
 
 ;# {GLBEnabledOnlyInRegions} {Enabled:false} {Enable Gloebit Money Module in specific regions by region UUID (space delimited list)?} {*} ""
 ;; If Enabled is false above, you can enable for individual regions controlled by this OpenSim process.
@@ -46,11 +43,35 @@ GLBSecret=OAuth sandbox secret
 ;; Please contact GLBOnwerName at GLBOwnerEmail if this problem persists.
 ;; GLBOwnerName should be replaced with the neme of the person or avatar which manages this OpenSim process.
 GLBOwnerName=Your Avatar Name
+
+;; GLBOwnerEmail should be replaced with the email address (or other contact mechanism) for the person who manages this OpenSim process.
 GLBOwnerEmail=Your Email
 
-;; Should be set for robust for grid, opensim for standalone
-GLBSpecificConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;User ID=robustuser;Password=robustpassword;Old Guids=true;Allow Zero Datetime=true;Connect Timeout=28800;Command Timeout=28800;"
+;;;;; CONFIGURE NEW SESSION MESSAGING ;;;;;
+;; The following determine if a user receives messaging at the start of a new session
+;; A new session is defined as the first time a user enters a Gloebit enabled region for a Gloebit app during a viewer login;# {GLBShowNewSessionPurchaseIM} {Show purchase gloebits IM to user at session start?} {false, true} false
+; GLBShowNewSessionPurchaseIM = false;# {GLBShowNewSessionAuthIM} {Show auth app IM to user at session start?} {false, true} true
+; GLBShowNewSessionAuthIM = true;# {GLBShowWelcomeMessage} {Show welcome message when entering a region}
+GLBShowWelcomeMessage=true
 
-[Welcome]
-InternalPort=8004
-Enabled=True
+;;;;; CONFIGURE SINGLE GLOEBIT DB FOR APP OR GRID ;;;;;;
+;; Optional - If not configured here, Gloebit will use the DataService
+;; ConnectionString
+;;
+;; Purpose - If each Sim process uses it's own database and separate
+;; set of DB tables from each other sim, then a user will have
+;; to authorize Gloebit form every sim process and will receive
+;; our welcome message upon entering every Sim process each
+;; session. However, if you configure the Gloebit system on every
+;; sim to point to a single DB either here, or if that is your default
+;; configuration for your sim, then your users will only have to authorize
+;; Gloebit once for your app and will only receive our welcome message
+;; once each session, the first time they enter a gloebit enabled region.
+;;
+;; Both of these settings must be configured together.  See StandaloneCommon.ini.example
+;; for ConnectionString examples and availiable StorageProviders
+;GLBSpecificStorageProvider = OpenSim.Data.MySQL.dll
+;GLBSpecificConnectionString = "Data Source=localhost;Database=opensim;User ID=opensim;Password=***;Old Guids=true;"
+;GLBSpecificStorageProvider = "OpenSim.Data.PGSQL.dll"
+GLBSpecificStorageProvider=OpenSim.Data.MySQL.dll
+GLBSpecificConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;User ID=robustuser;Password=robustpassword;Old Guids=true;Allow Zero Datetime=true;Connect Timeout=28800;Command Timeout=28800;"
