--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -30,11 +30,11 @@ http_listener_port=8002
 
 ;; Set by Dreamgrid
 ; The URL of the Robust server
-BaseURL=http://mach.outworldz.net
+BaseURL=http://192.168.2.139
 
 ; The URL of the Robust server, if PublicPort and PrivatePort must be
 ; accessed via different hostnames as in the case of a NAT gateway
-PrivURL=http://192.168.2.133
+PrivURL=http://192.168.2.139
 
 ;; Set by Dreamgrid
 ; The public port of the Robust server
@@ -48,8 +48,8 @@ PrivatePort=8003
 DiagnosticsPort=8001
 
 ; jOpenSim URL
-jOpensimURL=http://mach.outworldz.net:80
-jOpensimURLSSL=http://mach.outworldz.net:443
+jOpensimURL=http://192.168.2.139:8080
+jOpensimURLSSL=http://192.168.2.139:443
 
 ; * The startup section lists all the connectors to start up in this server
 ; * instance. This may be only one, or it may be the entire server suite.
@@ -218,7 +218,7 @@ HomeURI="${Const|BaseURL}:${Const|PublicPort}"
 ;; comma separated list, and port (default 80 or 443)
 ;; in case there was for example a dns change, etc but it is still same grid
 ; HomeURIAlias = myoldname.something.org, 127.0.0.1,127.0.1:8043
-HomeURIAlias=aa,bb,cc
+HomeURIAlias=
 
 ;
 ;# {GatekeeperURI} {Hypergrid} {The URL of the gatekeeper of this world} {}
@@ -232,7 +232,7 @@ GatekeeperURI="${Const|BaseURL}:${Const|PublicPort}"
 ;; comma separated list, and port (default 80 or 443)
 ;; in case there was for example a dns change, etc
 ; GatekeeperURIAlias = myoldname.something.org, 127.0.0.1,127.0.1:8043
-GatekeeperURIAlias=aa,bb,cc
+GatekeeperURIAlias=
 
 ;
 [AccessControl]
