Use magic headers in Apache

--- a/OutworldzFiles/Apache/conf/httpd.conf
+++ b/OutworldzFiles/Apache/conf/httpd.conf
@@ -144,7 +144,7 @@ LoadModule log_config_module modules/mod_log_config.so
 #LoadModule macro_module modules/mod_macro.so
 #LoadModule md_module modules/mod_md.so
 LoadModule mime_module modules/mod_mime.so
-#LoadModule mime_magic_module modules/mod_mime_magic.so
+LoadModule mime_magic_module modules/mod_mime_magic.so
 LoadModule negotiation_module modules/mod_negotiation.so
 #LoadModule proxy_module modules/mod_proxy.so
 #LoadModule proxy_ajp_module modules/mod_proxy_ajp.so
@@ -445,7 +445,7 @@ LogLevel warn
 # contents of the file itself to determine its type.  The MIMEMagicFile
 # directive tells the module where the hint definitions are located.
 #
-#MIMEMagicFile conf/magic
+MIMEMagicFile conf/magic
 
 #
 # Customizable error responses come in three flavors:
