--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -48,8 +48,8 @@ PrivatePort=8003
 DiagnosticsPort=8001
 
 ; jOpenSim URL
-jOpensimURL=http://192.168.2.139:8080
-jOpensimURLSSL=http://192.168.2.139:443
+jOpensimURL=${Const|BaseURL}:80
+jOpensimURLSSL=${Const|BaseURL}:443
 
 ; * The startup section lists all the connectors to start up in this server
 ; * instance. This may be only one, or it may be the entire server suite.
@@ -539,7 +539,7 @@ MapTileURL="${Const|BaseURL}:${Const|PublicPort}/";
 ; Url to search service
 ;SearchURL = "${Const|jOpensimURL}/index.php?option=com_opensim&view=inworldsearch&task=viewersearch&tmpl=component&"
 ;SearchURL=http://www.hyperica.com/Search/query.php
-SearchURL=$(Const|jOpensimURL}/index.php?option=com_opensim&view=inworldsearch&task=viewer&templ=component&
+SearchURL=$(Const|jOpensimURL}:$(Const|ApachePort)/index.php?option=com_opensim&view=inworldsearch&task=viewer&templ=component&
 
 ; For V3 destination guide
 ;DestinationGuide = "${Const|jOpensimURL}/index.php?option=com_opensim&view=guide&tmpl=component"
