--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,4 @@
-
 OutworldzFiles/mysql/data/opensim/* filter=lfs diff=lfs merge=lfs -text
-
 # Denote all files that are truly binary and should not be modified.
 *.png binary
 *.gif binary
@@ -9,9 +7,6 @@ OutworldzFiles/mysql/data/opensim/* filter=lfs diff=lfs merge=lfs -text
 *.exe binary
 *.txt text
 core.autocrlf true
-
 *.MYI binary
 *.MYD binary
-
-
-
+Outworldzfiles/Help/Jopensim.rtf filter=lfs diff=lfs merge=lfs -text
