Fix search URL for Joomla

--- a/Installer_Src/CodeMaid.config
+++ b/Installer_Src/CodeMaid.config
@@ -58,6 +58,19 @@
             <setting name="Formatting_CommentSkipWrapOnLastWord" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="Formatting_CommentXmlSplitAllTags" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Progressing_HideBuildProgressOnBuildStop" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Cleaning_UpdateSingleLineMethods" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Formatting_CommentXmlSplitSummaryTagToMultipleLines"
+                serializeAs="String">
+                <value>False</value>
+            </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
 </configuration>
