--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -30,11 +30,11 @@ http_listener_port=8002
 
 ;; Set by Dreamgrid
 ; The URL of the Robust server
-BaseURL=http://192.168.2.139
+BaseURL=http://192.168.2.100
 
 ; The URL of the Robust server, if PublicPort and PrivatePort must be
 ; accessed via different hostnames as in the case of a NAT gateway
-PrivURL=http://192.168.2.139
+PrivURL=http://192.168.2.100
 
 ;; Set by Dreamgrid
 ; The public port of the Robust server
@@ -367,6 +367,7 @@ AssetService="OpenSim.Services.AssetService.dll:AssetService"
 ;; Set by Dreamgrid
 ;;
 ; START  <= Leave this line
+Region_2=FallbackRegion
 Region_Welcome="DefaultRegion, DefaultHGRegion"
 
 ; END  <= Leave this line
@@ -530,7 +531,9 @@ Currency="G$"
 ClassifiedFee=0
 
 ;;
-WelcomeMessage=Welcome to DreamGrid , <USERNAME>
+WelcomeMessage=Welcome to DreamGrid, <USERNAME>
+
+;;
 AllowRemoteSetLoginLevel="false"
 
 ; For V2 map
@@ -539,13 +542,13 @@ MapTileURL="${Const|BaseURL}:${Const|PublicPort}/";
 ; Url to search service
 ;SearchURL = "${Const|jOpensimURL}/index.php?option=com_opensim&view=inworldsearch&task=viewersearch&tmpl=component&"
 ;SearchURL=http://www.hyperica.com/Search/query.php
-SearchURL=$(Const|jOpensimURL}:$(Const|ApachePort)/index.php?option=com_opensim&view=inworldsearch&task=viewer&templ=component&
+SearchURL=http://192.168.2.100:80/JOpensim/index.php?option=com_opensim&view=inworldsearch&task=viewer&templ=component&
 
 ; For V3 destination guide
 ;DestinationGuide = "${Const|jOpensimURL}/index.php?option=com_opensim&view=guide&tmpl=component"
-DestinationGuide="http://www.hyperica.com/destination-guide/"
-
 ;DestinationGuideURI="http://www.hyperica.com/destination-guide/"
+DestinationGuide=https://hyperica.com/destination-guide
+
 ; For V3 avatar picker (( work in progress ))
 ; AvatarPicker = "${Const|BaseURL}/avatars"
 ; If you run this login server behind a proxy, set this to true
@@ -578,7 +581,7 @@ DSTZone="America/Los_Angeles;Pacific Standard Time"
 ;; Some Grids/Users use a transparent proxy that makes use of the X-Forwarded-For HTTP Header, If you do, set this to true
 ;; If you set this to true and you don't have a transparent proxy, it may allow attackers to put random things in the X-Forwarded-For header to
 ;;     get around this basic DOS protection.
-DOSAllowXForwardedForHeader=true
+DOSAllowXForwardedForHeader=false
 
 ;;
 ;; The protector adds up requests during this rolling period of time, default 10 seconds
@@ -586,7 +589,7 @@ DOSRequestTimeFrameMS=10000
 
 ;;
 ;; The amount of requests in the above timeframe from the same endpoint that triggers protection
-DOSMaxRequestsInTimeFrame=5
+DOSMaxRequestsInTimeFrame=50
 
 ;;
 ;; The amount of time that a specific endpoint is blocked.    Default 2 minutes.
@@ -672,7 +675,6 @@ password=${Const|BaseURL}/${Const|PublicPort}/wifi/forgotpassword
 [GatekeeperService]
 
 ; Set by DreamGrid
-AutoLoadTeleport=True
 LocalServiceModule="OpenSim.Services.HypergridService.dll:GatekeeperService"
 
 ;; for the service
@@ -852,7 +854,6 @@ UserAccountService="OpenSim.Services.UserAccountService.dll:UserAccountService"
 ;; Can overwrite the default in [Hypergrid], but probably shouldn't
 HomeURI="${Const|BaseURL}:${Const|PublicPort}"
 
-;; end hypergrid
 ;; Sets the maximum number of groups an agent may join
 ; MaxAgentGroups = 42
 [UserProfilesService]
@@ -880,7 +881,6 @@ SMTP_SERVER_PORT=587
 SMTP_SERVER_LOGIN=Gmail for notification
 SMTP_SERVER_PASSWORD=Gmail password
 
-; Automatically changed by Dreamworld - do not change this - Should be True ( case sensitive)
 ;; Set to True to enable Smart Start
 ;; Set by Dreamgrid
 [AutoLoadTeleport]
