--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon-GridServer.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon-GridServer.ini
@@ -85,7 +85,7 @@ InventoryServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 ;MaxRetries = 0
 ;
 [GridInfo]
-economymodule=Gloebit
+;economymodule=Gloebit
 
 ;
 ; Change this to your grid info service
@@ -102,6 +102,7 @@ GridServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 ;AllowHypergridMapSearch = true
 ;; Directory for map tile images of linked regions
 ; MapTileDirectory = "./maptiles"
+
 ; === HG ONLY ===
 ;; Change this to the address of your Gatekeeper service
 ;; (usually bundled with the rest of the services in one
@@ -109,12 +110,12 @@ GridServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 Gatekeeper="${Const|BaseURL}:${Const|PublicPort}"
 
 [EstateDataStore]
-
 ;
 ; Uncomment if you want centralized estate data at robust server,
 ; in which case the URL in [EstateService] will be used
 ;
 ;LocalServiceModule = "OpenSim.Services.Connectors.dll:EstateDataRemoteConnector"
+
 [EstateService]
 EstateServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 
@@ -127,7 +128,6 @@ EstateServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 Gatekeeper="${Const|BaseURL}:${Const|PublicPort}"
 
 [AvatarService]
-
 ;
 ; Change this to your grid-wide grid server
 ;
@@ -201,7 +201,6 @@ OutboundPermission = True
 ; CheckSeparateAssets = false
 ; RegionHGAssetServerURI = ${Const|BaseURL}:${Const|PublicPort}
 [HGAssetService]
-
 ;
 ; === HG ONLY ===
 ; Change this to your server
