--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,4 @@ core.autocrlf true
 *.MYI binary
 *.MYD binary
 Outworldzfiles/Help/Jopensim.rtf filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
