--- a/Installer_Src/Setup DreamWorld/app.config
+++ b/Installer_Src/Setup DreamWorld/app.config
@@ -7,7 +7,7 @@
   </configSections>
   <appSettings>
     <!--<add key="SendKeys" value="SendInput"/>-->
-    <add key="SendKeys" value="JournalHook"/>
+    <!--<add key="SendKeys" value="JournalHook"/>-->
   </appSettings>
   <system.diagnostics>
     <sources>
